Fixed ordering of the about-us page, fixed frontend spacing

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -412,7 +412,7 @@ canvas#particleCanvas {
     color: #fff;
     width: 100%;
     text-align: center;
-    padding: 2em 0 18em;
+    padding: 16em 0 12em;
     overflow: hidden;
 }
 
